modified the front pages

--- a/src/main/resources/templates/analysis/statistic_analysis.html
+++ b/src/main/resources/templates/analysis/statistic_analysis.html
@@ -101,10 +101,18 @@
                             <div class="card-header no-border">
                                 <div class="">
                                     <div class="form-group row">
-                                        <div class="col-3">
-                                            <h5>
-                                                当前影院：中影国际影城(欢乐海岸店)          对比影院
-                                            </h5>
+                                        <div class="col-2">
+                                            <h6>
+                                                当前影院:
+                                            </h6>
+                                            <span>
+                                                中影国际影城(欢乐海岸店)
+                                            </span>
+                                        </div>
+                                        <div class="col-4">
+                                            <h6>
+                                                对比影院:
+                                            </h6>
                                             <select class="form-control">
                                                 <option>万达影城(五角场店)</option>
                                                 <option>UME华星影城</option>
@@ -112,10 +120,10 @@
                                                 <option>大光明影院</option>
                                             </select>
                                         </div>
-                                        <div class="col-3">
-                                            <h5>
+                                        <div class="col-4">
+                                            <h6>
                                                 时间范围：
-                                            </h5>
+                                            </h6>
                                             <select class="form-control">
                                                 <option>最近1个月</option>
                                                 <option>最近三个月</option>
@@ -124,8 +132,6 @@
                                             </select>
                                         </div>
                                     </div>
-<!--                                    <h3 class="card-title">入座人数统计</h3>-->
-<!--                                    <a href="javascript:void(0);"></a>-->
                                 </div>
                             </div>
                             <div class="card-body">
