--- a/src/main/resources/templates/assets/details.html
+++ b/src/main/resources/templates/assets/details.html
@@ -206,7 +206,10 @@
               <!-- info row -->
               <div class="row invoice-info">
                 <div class="col-sm-6">
-                  <div class="col-sm-6 invoice-col">
+                  <h5>
+                    影院基本信息：
+                  </h5>
+                  <div class="col-sm-12 invoice-col">
                     <address>
                       <br/>
                       <strong>省市区: </strong>
@@ -244,19 +247,24 @@
            
                     </div>
                   </div>
-                </div>
                 <div class="col-sm-6">
                   <div class="row">
-                    <div class="col-sm-6">
-                      <h5>中影国际影城(欢乐海岸店) 影厅分布图</h5>
+                    <div class="col-12">
+                      <h5>
+                        影厅分布图：
+                      </h5>
+                    </div>
+                    <div class="col-12">
+                      <div class="col-sm-1">
+                        &nbsp;
+                      </div>
+                      <div class="col-sm-11">
+                        <img class="img-fluid" alt="photo" width="35%" th:src="@{/dist/img/WechatIMG273.jpeg}">
+                      </div>
                     </div>
                   </div>
-                  <img class="img-fluid" alt="photo" width="55%" th:src="@{/dist/img/WechatIMG273.jpeg}">
-<!--                    <div id="father">-->
-<!--                        <div id="box">-->
-<!--                        <canvas id="canvas" width="400px" height="450px"></canvas>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                </div>
+
               </div>
               </div>
               <!-- /.row -->
