--- a/src/main/resources/templates/assets/details_room.html
+++ b/src/main/resources/templates/assets/details_room.html
@@ -206,7 +206,10 @@
               <!-- info row -->
               <div class="row invoice-info">
                 <div class="col-sm-6">
-                  <div class="col-sm-6 invoice-col">
+                  <h5>
+                    影院基本信息：
+                  </h5>
+                  <div class="col-sm-12 invoice-col">
                     <address>
                       <br/>
                       <strong>省市区: </strong>
@@ -244,16 +247,21 @@
                   </div>
                 </div>
                 <div class="col-sm-6">
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <h5>中影国际影城(欢乐海岸店) 第1放映厅 布局平面图</h5>
+                    <div class="row">
+                      <div class="col-12">
+                        <h5>
+                          布局平面图：
+                        </h5>
+                      </div>
+                      <div class="col-12">
+                        <div class="col-sm-1">
+                          &nbsp;
+                        </div>
+                        <div class="col-sm-11">
+                          <img class="img-fluid" alt="photo" width="35%" th:src="@{/dist/img/WechatIMG269.jpeg}">
+                        </div>
+                      </div>
                     </div>
-                    <img class="img-fluid" alt="photo" width="55%" th:src="@{/dist/img/WechatIMG269.jpeg}">
-<!--                    <div id="father">-->
-<!--                      <div id="box">-->
-<!--                        <canvas id="canvas" width="400px" height="450px"></canvas>-->
-<!--                      </div>-->
-<!--                    </div>-->
                   </div>
                 </div>
               </div>
@@ -295,33 +303,7 @@
 					  <td>1 号厅</td>
 					  <th><a href="/assets/equipment_details_b">>>详情</a></th>
                       <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-10s">官网详情</a> </th>
-
                     </tr>
-<!--					<tr>-->
-<!--                      <td>巴可</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--					  <td>3 号厅</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr><tr>-->
-<!--                      <td>NEC</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--					  <td>1 号厅</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr><tr>-->
-<!--                      <td>巴可</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--					  <td>2 号厅</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr>            -->
                     </tbody>
                   </table>
                 </div>
@@ -361,28 +343,6 @@
                       <td>-</td>
 					  <th><a href="">>>详情</a></th>
                     </tr>
-<!--					<tr>-->
-<!--                      <td>杜比</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr><tr>-->
-<!--                      <td>杜比</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr><tr>-->
-<!--                      <td>NEC</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr>            -->
                     </tbody>
                   </table>
                 </div>
@@ -430,21 +390,6 @@
                       <td>-</td>
 					  <th><a href="">>>详情</a></th>
                     </tr>
-<!--                    <tr>-->
-<!--                      <td>NEC</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr><tr>-->
-<!--                      <td>巴可</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr>            -->
                     </tbody>
                   </table>
                 </div>
@@ -452,7 +397,7 @@
               </div>
               <!-- /.row -->
 			  
-<address></address>
+              <address></address>
               <!-- Table row -->
               <div class="row">
 			  <h4>&nbsp&nbsp&nbsp功放信息：</h4>
@@ -492,21 +437,6 @@
                       <td>-</td>
 					  <th><a href="">>>详情</a></th>
                     </tr>
-<!--                    <tr>-->
-<!--                      <td>NEC</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr><tr>-->
-<!--                      <td>巴可</td>-->
-<!--                      <td>DP2K-32C</td>-->
-<!--                      <td>1253354615</td>-->
-<!--                      <td>2018/6/24</td>-->
-<!--                      <td>-</td>-->
-<!--					  <th><a href="">>>详情</a></th>-->
-<!--                    </tr>            -->
                     </tbody>
                   </table>
                 </div>
