--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -121,7 +121,7 @@
                       <label>品牌：</label>
                       <select class="form-control" name="brand">
                         <option>可视</option>
-                        <option>巴克</option>
+                        <option>巴可</option>
                         <option>杜比</option>
                         <option>戴尔</option>
                       </select>
@@ -173,7 +173,7 @@
           </div>
           <!-- /.card-header -->
           <div class="card-body">
-            <table id="example1" class="table table-bordered table-striped">
+            <table class="table table-bordered table-striped">
               <thead>
               <tr>
                 <th>序号</th>
@@ -202,8 +202,8 @@
                 <td >放映机</td>
                 <td >氙灯</td>
                 <td >科视 Christie</td>
-                <td >2K,2系列</td>
-                <td >CP2215</td>
+                <td > CineLife™ 系列3</td>
+                <td >CP4325-RGB</td>
                 <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/Christie-CP2215-DLP-Digital-Cinema-Projector">官网详情</a></th>
               </tr>
@@ -212,10 +212,10 @@
                 <td >放映机</td>
                 <td >氙灯</td>
                 <td >科视 Christie</td>
-                <td >2K,2系列</td>
-                <td >CP2220</td>
-                <th><a href="/base/equipment/details">详情</a></th>
-                <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP2220-DLP-Digital-Cinema-Projector">官方详情</a></th>
+                <td >4K,2系列</td>
+                <td >CP4220</td>
+                <th>详情</th>
+                <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP4220-DLP-Digital-Cinema-Projector">官网详情</a></th>
               </tr>
               <tr>
                 <td >3</td>
@@ -224,7 +224,7 @@
                 <td >科视 Christie</td>
                 <td >2K,2系列</td>
                 <td >CP2230</td>
-                <th><a href="/base/equipment/details">详情</a></th>
+                <th>详情</th>
 
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP2230-DLP-Digital-Cinema-Projector">官网详情</a></th>
               </tr>
@@ -233,11 +233,13 @@
                 <td >放映机</td>
                 <td >氙灯</td>
                 <td >科视 Christie</td>
-                <td >4K,2系列</td>
-                <td >CP4220</td>
-                <th><a href="/base/equipment/details">详情</a></th>
-                <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP4220-DLP-Digital-Cinema-Projector">官网详情</a></th>
+                <td >2K,2系列</td>
+                <td >CP2220</td>
+                <th>详情</th>
+                <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP2220-DLP-Digital-Cinema-Projector">官方详情</a></th>
               </tr>
+
+
               <tr>
                 <td >5</td>
                 <td >放映机</td>
@@ -245,9 +247,9 @@
                 <td >巴可 Barco</td>
                 <td >C系列</td>
                 <td >DP2K-20C</td>
-                <th><a href="/base/equipment/details">详情</a></th>
+                <th>详情</th>
 
-                <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-20c#specs">官网详情</a></th>
+                <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-20c">官网详情</a></th>
               </tr>
               <tr>
                 <td >6</td>
@@ -256,7 +258,7 @@
                 <td >巴可 Barco</td>
                 <td >B系列</td>
                 <td >DP2K-23B</td>
-                <th><a href="/base/equipment/details">详情</a></th>
+                <th>详情</th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-23b">官网详情</a></th>
               </tr>
               <tr>
@@ -266,7 +268,7 @@
                 <td >巴可 Barco</td>
                 <td >B系列</td>
                 <td >DP2K-23B</td>
-                <th><a href="/base/equipment/details">详情</a></th>
+                <th>详情</th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-8s">官网详情</a></th>
               </tr>
               <tr>
@@ -276,7 +278,7 @@
                 <td >巴可 Barco</td>
                 <td >S系列</td>
                 <td >DP2K-10S</td>
-                <th><a href="/base/equipment/details">详情</a></th>
+                <th>详情</th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-10s">官网详情</a></th>
               </tr>
               </tbody>
