--- a/src/main/resources/templates/documents/stand_details.html
+++ b/src/main/resources/templates/documents/stand_details.html
@@ -87,7 +87,7 @@
             <div class="col-md-12">
               <div class="card card-primary card-outline">
                 <div class="card-header">
-                  <h3 class="card-title">数字放映机的故障维护和简单的故障诊断
+                  <h3 class="card-title">数字电影中档和流动放映系统用声频功率放大器的技术要求和测量方法
                     <span class="mailbox-read-time float-right">2019年10月20日 1:45 下午</span>
                   </h3>
                 </div>
@@ -112,67 +112,44 @@
                     <!-- info row -->
                     <div class="row invoice-info">
                       <div class="col-sm-3">
+                        <address>
+                          <strong>
+                            标准概览：
+                          </strong>
+                        </address>
                         <div class="row" style="padding-left: 10px;">
-                          <img  class="attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg">
-                        </div>
-                      </div>
-                      <div class="col-sm-3">
-                        <span class="mailbox-attachment-icon">
-                          <i class="fa fa-file-pdf-o"></i>
-                        </span>
-                        <div class="mailbox-attachment-info">
-                          <a href="#" class="mailbox-attachment-name"><i class="fa fa-paperclip"></i> 数字电影中档和流动放映系统版本1.pdf</a>
-                          <span class="mailbox-attachment-size">
-                          1,245 KB
-<!--                          <a href="#" class="btn btn-default btn-sm float-right"><i class="fa fa-cloud-download"></i></a>-->
-                        </span>
-                        </div>
-                        <span class="mailbox-attachment-icon">
-                          <i class="fa fa-file-pdf-o"></i>
-                        </span>
-                        <div class="mailbox-attachment-info">
-                          <a href="#" class="mailbox-attachment-name"><i class="fa fa-paperclip"></i> 数字电影中档和流动放映系统版本2.pdf</a>
-                          <span class="mailbox-attachment-size">
-                          1,245 KB
-<!--                          <a href="#" class="btn btn-default btn-sm float-right"><i class="fa fa-cloud-download"></i></a>-->
-                        </span>
+                          <img  class="attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height: 400px;">
                         </div>
                       </div>
                       <div class="col-sm-6">
-<!--                        <video style="height: 400px; width: 600px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">-->
-                          <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fiyq5a7xu%2Findex.m3u8" height="400px" width="600px" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<!--                        </video>-->
+                        <address>
+                          <strong>
+                            标准解读：
+                          </strong>
+                        </address>
+                        <!--                        <video style="height: 400px; width: 600px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">-->
+                        <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fiyq5a7xu%2Findex.m3u8" height="400px" width="600px" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                        <!--                        </video>-->
                       </div>
-                    </div>
-                    <div class="row invoice-info">
                       <div class="col-sm-3">
                         <address>
+                          <br/>
                           <br/>
                           <strong>标准类型: </strong>
                           <br>国家标准<br>
                         </address>
-                      </div>
-                      <div class="col-sm-3">
                         <address>
-                          <br/>
                           <strong>标准编号: </strong>
-                          <br>GY/T 248-2011<br>
+                          <br>GY/T 24
                         </address>
-                      </div>
-                      <div class="col-sm-3">
                         <address>
                           <strong>主要内容：</strong><br>
                           规定了数字电影中档和流动放映系统用声频功率放大器的技术要求和测量方法。对于能够确保同样测量不确定度的任何等效测量方法也可以采用。有争议时，应以本标准为准。
                         </address>
-                      </div>
-                      <div class="col-sm-3">
-                        <!-- /.col -->
-                        <div class="invoice-col">
-                          <address>
-                            <strong>适用范围：</strong><br>
-                            适用于数字电影中档和流动放映系统的声频功率放大器的应用和检测。
-                          </address>
-                        </div>
+                        <address>
+                          <strong>适用范围：</strong><br>
+                          适用于数字电影中档和流动放映系统的声频功率放大器的应用和检测。
+                        </address>
                       </div>
                     </div>
                       </div>
@@ -181,7 +158,6 @@
                   <!-- /.mailbox-read-message -->
                 </div>
           </div>
-
               <!-- /. box -->
         </div>
 
