--- a/src/main/resources/templates/documents/operate_details.html
+++ b/src/main/resources/templates/documents/operate_details.html
@@ -165,7 +165,7 @@
                     </div>
 				  </div>
 				  <div class="col-6 table-responsive">
-                    <video style="height: 400px; width: 600px;" autoplay="autoplay" controls="controls" th:src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fvx41gl30%2Findex.m3u8" >
+                      <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fvx41gl30%2Findex.m3u8" height="400px" width="600px" frameborder="0" scrolling="no" allowfullscreen></iframe>
                       <span>&nbsp;</span>
                     </video>
                   </div>
