--- a/src/main/resources/templates/assets/equipment_details_b.html
+++ b/src/main/resources/templates/assets/equipment_details_b.html
@@ -17,28 +17,9 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   <!-- Viewer.js-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.3.7/viewer.css" integrity="sha256-HD7WuGVQWPCs3E5c5PdzAZEyVrbMtwEi5eRXNc+IlU8=" crossorigin="anonymous" />
-
-  <style>
-    #images{
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      /*width: 200px;*/
-      /*overflow-wrap: break-word;*/
-      list-style: none;
-      padding-left: 0;
-    }
-    #images  li{
-      width: 23%;
-      /*margin-right: 0.1px;*/
-    }
-
-    .videolist { position:relative; float:left; width:500px; height:300px; margin-right:50px; margin-top:15px; margin-bottom:30px; }
-    .videolist:hover{ cursor: pointer; }
-    .videoed { display:none; width:50px; height:50px; position: absolute; left:45%; top:45%; z-index:99; border-radius:100%; }
-    .videos{ display:none; border: 1px solid #080808; position:fixed; left:50%; top:50%; margin-left:-320px; margin-top:-210px; z-index:100; width:640px; height:360px; }
-    .vclose { position:absolute;right:1%; top:1%; border-radius:100%; cursor: pointer; }
-  </style>
+  <script type=text/javascript th:src="@{/dist/js/lrtk.js}"></script>
+  <script type=text/javascript th:src="@{/dist/js/jquery-1.4.2.min.js}"></script>
+  <link rel=stylesheet type=text/css th:href="@{/dist/css/lrtk.css}">
 </head>
 <body class="hold-transition sidebar-mini">
 <!-- Site wrapper -->
@@ -161,6 +142,14 @@
 
                 <p class="text-muted">
                   宽度可达10米/33英寸（屏幕增益1.2 @ 14ftl）</p>
+
+                <hr>
+
+                <strong><i class="fa fa-file-text-o mr-1"></i> Part Number
+                  </strong>
+
+                <p class="text-muted">
+                  19000-0012672-8389</p>
               </div>
 
               <!-- /.card-body -->
@@ -183,37 +172,60 @@
                   <div class="tab-pane active show" id="activity">
                     <!-- Post -->
                     <div class="post">
-                      <div class="user-block">
-                        <span class="description"></span>
-                      </div>
+
                       <!-- /.user-block -->
-                      <div class="row mb-3">
-                        <h6 class="col-sm-12"> 设备图片信息</h6>
+                      <div class="row">
                         <div class="col-sm-12">
-                          <ul id="images">
-                            <li><img class="img-fluid mb-3" th:src="@{/images/DP2K-10S right std angle jpg.jpg}" alt="Photo"></li>
-                            <li><img class="img-fluid mb-3" th:src="@{/images/DP2K-10S side jpg.jpg}" alt="Photo"></li>
-                            <li><img class="img-fluid mb-3" th:src="@{/images/cinema/cinema2.png}" alt="Photo"></li>
-                          </ul>
+                          <h6>设备图片视频信息</h6>
+                        </div>
+                        <div class="col-sm-10">
+                          <table width="1000" height="670" border="0" align="center" cellpadding="0" cellspacing="0">
+                            <tr>
+                              <td>
+                                <div style="HEIGHT: 600px; OVERFLOW: hidden;" id=idTransformView>
+                                  <ul id=idSlider class=slider>
+                                    <div class="row">
+                                      <div style="POSITION: relative">
+                                        <ul class=txtbg></ul>
+                                        <span>巴可	DP2K-10S</span>
+                                        <a target="_blank"><img th:src="@{/images/DP2K-10S right std angle jpg.jpg}" width=1000 height=600></a>
+                                      </div>
+                                      <div style="POSITION: relative">
+                                        <ul class=txtbg></ul>
+                                        <span>巴可	DP2K-10S</span>
+                                        <a target="_blank"><img th:src="@{/images/DP2K-10S side jpg.jpg}" width=1000 height=600></a>
+                                      </div>
+                                      <div style="POSITION: relative">
+                                        <ul class=txtbg></ul>
+                                        <span>巴可	DP2K-10S</span>
+                                        <a target="_blank"><img th:src="@{/images/cinema/cinema2.png}" width=1000 height=600></a>
+                                      </div>
+                                      <div style="POSITION: relative">
+                                        <ul class=txtbg></ul>
+                                        <span>巴可	DP2K-10S</span>
+                                        <a target="_blank"><video preload="auto" controls="controls" th:src="@{https://www.barco.com.cn/video/ICMP_Install01.mp4}" width=1000 height=600></video></a>
+                                      </div>
+                                    </div>
+                                  </ul>
+                                </div>
+                                <div>
+                                  <ul id=idNum class=hdnum>
+                                    <li><img th:src="@{/images/DP2K-10S right std angle jpg.jpg}" width=61px height=45px></li>
+                                    <li><img th:src="@{/images/DP2K-10S side jpg.jpg}" width=61px height=45px></li>
+                                    <li><img th:src="@{/images/cinema/cinema2.png}" width=61px height=45px></li>
+                                    <li><img th:src="@{/images/play.png}" width=61px height=45px></li>
+                                  </ul>
+                                  <script language=javascript>
+                                    mytv("idNum","idTransformView","idSlider",1000,4,false,1000,8,false,"onclick");
+                                    //按钮容器aa，滚动容器bb，滚动内容cc，滚动宽度dd，滚动数量ee，滚动方向ff，延时gg，滚动速度hh，自动滚动ii，                              </script>
+                                </div>
+                              </td>
+                            </tr>
+                          </table>
                           <!-- /.row -->
                         </div>
-                        <!-- /.col -->
-                        <h6 class="col-sm-12"> 设备视频信息</h6>
-                        <br/>
-                        <div class="col-sm-3">
-                          <div class="videolist" vpath="v.jpg" ipath="https://www.barco.com.cn/video/ICMP_Install01.mp4">
-                            <div class="vtit">
-                              <img th:src="@{/images/backvideo.png}" height="200px" width="300px">
-                              <img th:src="@{/images/play.png}" class="videoed" style="display: none;">
-                            </div>
-                          </div>
-<!--                      <video class="img-fluid" controls="controls" th:src="@{/video/abc.mov}" alt="Photo"></video>-->
-                          <div class="videos" style="display: none;" >
-                            <video id="video" preload="auto" poster="/images/video_details.png" style="width: 640px;" th:src="@{https://www.barco.com.cn/video/ICMP_Install01.mp4}" controls="controls" >
-
-                            </video>
-                            <img onclick="close1()" class="vclose" th:src="@{/images/gb.png}" width="25px" height="25px">
-                          </div>
+                        <div class="col-sm-1">
+                          &nbsp;
                         </div>
                         <!-- /.col -->
                       </div>
