--- a/src/main/resources/templates/assets/equipment_details_k.html
+++ b/src/main/resources/templates/assets/equipment_details_k.html
@@ -17,28 +17,9 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   <!-- Viewer.js-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.3.7/viewer.css" integrity="sha256-HD7WuGVQWPCs3E5c5PdzAZEyVrbMtwEi5eRXNc+IlU8=" crossorigin="anonymous" />
-
-  <style>
-    #images{
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      /*width: 200px;*/
-      /*overflow-wrap: break-word;*/
-      list-style: none;
-      padding-left: 0;
-    }
-    #images  li{
-      width: 23%;
-      /*margin-right: 0.1px;*/
-    }
-
-    .videolist { position:relative; float:left; width:500px; height:300px; margin-right:50px; margin-top:15px; margin-bottom:30px; }
-    .videolist:hover{ cursor: pointer; }
-    .videoed { display:none; width:50px; height:50px; position: absolute; left:45%; top:45%; z-index:99; border-radius:100%; }
-    .videos{ display:none; border: 1px solid #080808; position:fixed; left:50%; top:50%; margin-left:-320px; margin-top:-210px; z-index:100; width:640px; height:360px; }
-    .vclose { position:absolute;right:1%; top:1%; border-radius:100%; cursor: pointer; }
-  </style>
+  <script type=text/javascript th:src="@{/dist/js/lrtk.js}"></script>
+  <script type=text/javascript th:src="@{/dist/js/jquery-1.4.2.min.js}"></script>
+  <link rel=stylesheet type=text/css th:href="@{/dist/css/lrtk.css}">
 </head>
 <body class="hold-transition sidebar-mini">
 <!-- Site wrapper -->
@@ -191,43 +172,102 @@
                   <div class="tab-pane active show" id="activity">
                     <!-- Post -->
                     <div class="post">
-                      <div class="user-block">
-                        <span class="description"></span>
-                      </div>
                       <!-- /.user-block -->
-                      <div class="row mb-3">
-                        <h6 class="col-sm-12"> 设备图片信息</h6>
+                      <div class="row">
                         <div class="col-sm-12">
-                          <ul id="images">
-                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" alt="Photo"></li>
-                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" alt="Photo"></li>
-                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Back_jpg.jpg}" alt="Photo"></li>
-                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_High_Front_jpg.jpg}" alt="Photo"></li>
-                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Side_jpg.jpg}" alt="Photo"></li>
-                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_High_Left_jpg.jpg}" alt="Photo"></li>
-                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_High_Right_jpg.jpg}" alt="Photo"></li>
-                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Internal_jpg.jpg}" alt="Photo"></li>
-                          </ul>
+                          <h6>设备图片视频信息</h6>
+                        </div>
+                        <div class="col-sm-10">
+                          <table width="1000" height="600" border="0" align="center" cellpadding="0" cellspacing="0">
+                            <tr>
+                              <td>
+                                <div style="HEIGHT: 600px; OVERFLOW: hidden;" id=idTransformView>
+                                  <ul id=idSlider class=slider>
+                                    <div class="row">
+                                      <div style="POSITION: relative">
+                                        <ul class=txtbg></ul>
+                                        <span>科视Christie CP4325-RGB</span>
+                                        <a target="_blank"><img th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" width=1000 height=600></a>
+                                      </div>
+                                      <div style="POSITION: relative">
+                                        <ul class=txtbg></ul>
+                                        <span>科视Christie CP4325-RGB</span>
+                                        <a target="_blank"><img th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" width=1000 height=600></a>
+                                      </div>
+                                      <div style="POSITION: relative">
+                                        <ul class=txtbg></ul>
+                                        <span>科视Christie CP4325-RGB</span>
+                                        <a target="_blank"><img th:src="@{/images/CP4325_Back_jpg.jpg}" width=1000 height=600></a>
+                                      </div>
+                                      <div style="POSITION: relative">
+                                        <ul class=txtbg></ul>
+                                        <span>科视Christie CP4325-RGB</span>
+                                        <a target="_blank"><img th:src="@{/images/CP4325_High_Front_jpg.jpg}" width=1000 height=600></a>
+                                      </div>
+                                      <div style="POSITION: relative">
+                                        <ul class=txtbg></ul>
+                                        <span>科视Christie CP4325-RGB</span>
+                                        <a target="_blank"><video preload="auto" controls="controls" th:src="@{/video/abc.mov}" width=1000 height=600></video></a>
+                                      </div>
+                                    </div>
+                                  </ul>
+                                </div>
+                                <div>
+                                  <ul id=idNum class=hdnum>
+                                    <li><img th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" width=61px height=45px></li>
+                                    <li><img th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" width=61px height=45px></li>
+                                    <li><img th:src="@{/images/CP4325_Back_jpg.jpg}" width=61px height=45px></li>
+                                    <li><img th:src="@{/images/CP4325_High_Front_jpg.jpg}" width=61px height=45px></li>
+                                    <li><img th:src="@{/images/play.png}" width=61px height=45px></li>
+                                  </ul>
+                                  <script language=javascript>
+                                    mytv("idNum","idTransformView","idSlider",1000,8,false,1000,8,false,"onclick");
+                                    //按钮容器aa，滚动容器bb，滚动内容cc，滚动宽度dd，滚动数量ee，滚动方向ff，延时gg，滚动速度hh，自动滚动ii，                              </script>
+                                </div>
+                              </td>
+                            </tr>
+                          </table>
                           <!-- /.row -->
                         </div>
-                        <!-- /.col -->
-                        <h6 class="col-sm-12"> 设备视频信息</h6>
-                        <br/>
-                        <div class="col-sm-3">
-                          <div class="videolist" vpath="v.jpg" ipath="/video/abc.mov">
-                            <div class="vtit">
-                              <img th:src="@{/images/video_details.png}" height="200px" width="300px">
-                              <img th:src="@{/images/play.png}" class="videoed" style="display: none;">
-                            </div>
-                          </div>
-<!--                      <video class="img-fluid" controls="controls" th:src="@{/video/abc.mov}" alt="Photo"></video>-->
-                          <div class="videos" style="display: none;" >
-                            <video id="video" preload="auto" poster="/images/video_details.png" style="width: 640px;" th:src="@{/video/abc.mov}" controls="controls" autoplay="autoplay" >
-
-                            </video>
-                            <img onclick="close1()" class="vclose" th:src="@{/images/gb.png}" width="25px" height="25px">
-                          </div>
+                        <div class="col-sm-1">
+                          &nbsp;
                         </div>
+                        <!-- /.col -->
+<!--                        <div class="col-sm-6">-->
+<!--                          <h6> 设备视频信息</h6>-->
+<!--                          <table width="500" height="400" border="0" align="center" cellpadding="0" cellspacing="0">-->
+<!--                            <tr>-->
+<!--                              <td>-->
+<!--                                <div style="HEIGHT: 400px; OVERFLOW: hidden;" id=idTransformViewvideo>-->
+<!--                                  <ul id=idSlidervideo class=slider>-->
+<!--                                    <div class="row">-->
+<!--                                      <div style="POSITION: relative">-->
+<!--                                        <ul ></ul>-->
+<!--&lt;!&ndash;                                        <span>科视Christie CP4325-RGB</span>&ndash;&gt;-->
+<!--                                        <a target="_blank"><video preload="auto" controls="controls" th:src="@{/video/abc.mov}" width=500 height=400></video></a>-->
+<!--                                      </div>-->
+<!--                                      <div style="POSITION: relative">-->
+<!--                                        <ul ></ul>-->
+<!--&lt;!&ndash;                                        <span>科视Christie CP4325-RGB</span>&ndash;&gt;-->
+<!--                                        <a target="_blank"><video preload="auto" controls="controls" th:src="@{/video/abc.mov}" width=500 height=400></video></a>-->
+<!--                                      </div>-->
+<!--                                    </div>-->
+<!--                                  </ul>-->
+<!--                                </div>-->
+<!--                                <div>-->
+<!--                                  <ul id=idNumvideo class=hdnum>-->
+<!--                                    <li><img th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" width=61px height=45px></li>-->
+<!--                                    <li><img th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" width=61px height=45px></li>-->
+<!--                                  </ul>-->
+<!--                                  <script language=javascript>-->
+<!--                                    mytv("idNumvideo","idTransformViewvideo","idSlidervideo",500,2,false,1000,8,false,"onclick");-->
+<!--                                    //按钮容器aa，滚动容器bb，滚动内容cc，滚动宽度dd，滚动数量ee，滚动方向ff，延时gg，滚动速度hh，自动滚动ii，                              </script>-->
+<!--                                </div>-->
+<!--                              </td>-->
+<!--                            </tr>-->
+<!--                          </table>-->
+
+<!--                        </div>-->
                         <!-- /.col -->
                       </div>
                       <!-- /.row -->
