modified front page

--- a/src/main/resources/templates/assets/equipment_details_k.html
+++ b/src/main/resources/templates/assets/equipment_details_k.html
@@ -204,11 +204,11 @@
                                         <span>科视Christie CP4325-RGB</span>
                                         <a target="_blank"><img th:src="@{/images/CP4325_High_Front_jpg.jpg}" width=1000 height=600></a>
                                       </div>
-                                      <div style="POSITION: relative">
-                                        <ul class=txtbg></ul>
-                                        <span>科视Christie CP4325-RGB</span>
-                                        <a target="_blank"><video preload="auto" controls="controls" th:src="@{/video/abc.mov}" width=1000 height=600></video></a>
-                                      </div>
+<!--                                      <div style="POSITION: relative">-->
+<!--                                        <ul class=txtbg></ul>-->
+<!--                                        <span>科视Christie CP4325-RGB</span>-->
+<!--                                        <a target="_blank"><video preload="auto" controls="controls" th:src="@{/video/abc.mov}" width=1000 height=600></video></a>-->
+<!--                                      </div>-->
                                     </div>
                                   </ul>
                                 </div>
@@ -218,7 +218,7 @@
                                     <li><img th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" width=61px height=45px></li>
                                     <li><img th:src="@{/images/CP4325_Back_jpg.jpg}" width=61px height=45px></li>
                                     <li><img th:src="@{/images/CP4325_High_Front_jpg.jpg}" width=61px height=45px></li>
-                                    <li><img th:src="@{/images/play.png}" width=61px height=45px></li>
+<!--                                    <li><img th:src="@{/images/play.png}" width=61px height=45px></li>-->
                                   </ul>
                                   <script language=javascript>
                                     mytv("idNum","idTransformView","idSlider",1000,8,false,1000,8,false,"onclick");
