modified front oages

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -225,10 +225,10 @@
 
                                 <div class="d-flex flex-row justify-content-around">
                                     <span class="mr-2">
-                                        实时影厅温度：<span style="color: blue;">30.1℃</span>
+                                        实时影厅温度：<span style="color:green;">30.1℃</span>
                                     </span>
                                     <span class="mr-2">
-                                        温度参考范围：<span style="color: green;">20℃-32℃</span>
+                                        温度参考范围：<span style="color: blue;">20℃-32℃</span>
                                     </span>
                                   <span class="mr-2">
                                     <i class="fa fa-square text-primary"></i>
@@ -351,10 +351,10 @@
 
                                 <div class="d-flex flex-row justify-content-around">
                                     <span class="mr-2">
-                                        实时影厅相对湿度：<span style="color: blue;">9.1% &nbsp; ↓</span>
+                                        实时影厅相对湿度：<span style="color: red;">9.1% &nbsp; ↓</span>
                                     </span>
                                     <span class="mr-2">
-                                        相对湿度参考范围：<span style="color: red;">10%-90%</span>
+                                        相对湿度参考范围：<span style="color: blue;">10%-90%</span>
                                     </span>
                                   <span class="mr-2">
                                     <i class="fa fa-square text-primary"></i>
